# CppGuid

./: .gitignore  CMakeLists.txt  README.md  mamafile.py
cmake/: FindUUID.cmake
include/cppguid/: guid.h
src/: guid.cpp
tests/: test_cppguid.cpp
